[gd_scene load_steps=4 format=3 uid="uid://ce7w0wjd860q6"]

[ext_resource type="Script" uid="uid://bk5r4hynskv2u" path="res://node_3d.gd" id="1_uk47x"]
[ext_resource type="Texture2D" uid="uid://df1f0fpqf6f6a" path="res://assets/positron.png" id="2_6cq4x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6cq4x"]

[node name="Node3D" type="CharacterBody3D"]
collision_layer = 4
script = ExtResource("1_uk47x")
initial_velocity = 100.0
bullets_spawning_range = 0.5

[node name="hit_detect" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hit_detect"]
shape = SubResource("BoxShape3D_6cq4x")
debug_color = Color(0.9371259, 0.2505331, 0, 1)

[node name="Sprite3D" type="Sprite3D" parent="."]
visibility_range_begin = 2.0
visibility_range_begin_margin = 1.0
visibility_range_fade_mode = 1
billboard = 1
double_sided = false
texture = ExtResource("2_6cq4x")

[connection signal="body_entered" from="hit_detect" to="." method="_on_area_3d_body_entered"]
